--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
             max-width: 1100px;
             margin: 2rem auto;
             padding: 1rem;
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
             flex-wrap: wrap;
-            gap: 2rem;
-            justify-content: center;
+            gap: 1rem;
+        
         }
         .recipe-card {
             background: #fff;
